Bug 154311 - FILEOPEN MS XML Autofilter not imported
Summary: FILEOPEN MS XML Autofilter not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.6.2 release
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:25.8.0 inReleaseNotes:25.8
Keywords:
Depends on:
Blocks: MSO-XML2003
  Show dependency treegraph
 
Reported: 2023-03-21 15:28 UTC by ady
Modified: 2025-04-16 11:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ady 2023-03-21 15:28:33 UTC
Based on:

https://bz.apache.org/ooo/show_bug.cgi?id=82849

But, the problem is different in LO.

Sample file (MS Excel XML):
https://bz.apache.org/ooo/attachment.cgi?id=49069

Comment that includes the sample file:
https://bz.apache.org/ooo/show_bug.cgi?id=82849#c3


In LO 7.4.6:
* Date format is not automatically imported (e.g. Columns D, E)
* Date+Time format is not automatically imported (e.g. Columns K, L, M)
* Background color is incorrectly imported (e.g. Column I)
* Background color is not imported (e.g. Row 11)
* Autofilter is not imported (Row 11)

In LO 7.6.alpha built on 2023-03-19, the following import filters remain unsolved:
* Autofilter not imported (Row 11)
* Different Column width, possibly related to lack of recognition of Autofilter (e.g. Columns K, L)

I have not tested LO 7.5 in this case. I am leaving the earliest version unspecified for now, but my guess is that the autofilter has never been identified as applied/active.
Comment 1 Buovjaga 2023-04-11 11:38:47 UTC
Confirmed missing autofilter.

One issue per report, so let's make this be about the autofilter.

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8029a239cf294d06bb9f29aeb9b6897cb422a880
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 11 April 2023
Comment 2 Kohei Yoshida 2025-03-08 02:45:53 UTC
This should help resolve this: https://gerrit.libreoffice.org/c/core/+/182606
Comment 3 Commit Notification 2025-03-10 11:55:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/daba307859942e17ec6686988d5d7ac34b06d438

tdf#154311: sc_subsequent_filters: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.