Import autofilter via orcus interface

This should address tdf#154311.

Change-Id: I84401ad7a9982eaa868e68d7ae612debf09ecf9e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182606
Tested-by: Jenkins
Reviewed-by: Kohei Yoshida <kohei@libreoffice.org>