external/liborcus/UnpackedTarball_liborcus.mk
@@ -20,6 +20,7 @@ $(eval $(call gb_UnpackedTarball_add_patches,liborcus,\
 	external/liborcus/libtool.patch.0 \
 	external/liborcus/styles-element-rules.patch \
 	external/liborcus/enum-labels.patch \
+	external/liborcus/autofilter-crash.patch \
 ))
 
 ifeq ($(OS),WNT)
